@@ -6,6 +6,8 @@ PHP                                                                        NEWS
   . Fixed bug GH-15020 (Memory leak in Zend/Optimizer/escape_analysis.c).
     (nielsdos)
   . Fixed bug GH-15023 (Memory leak in Zend/zend_ini.c). (nielsdos)
+  . Fixed bug GH-13330 (Append -Wno-implicit-fallthrough flag conditionally).
+    (Peter Kokot)
 
 - Curl:
   . Fixed case when curl_error returns an empty string.
